force-app/main/default/objects/Opportunity/fields/ALN_Number__c.field-meta.xml
<CustomField>
    <fullName>ALN_Number__c</fullName>
    <description>Assistance Listing Number for a federal award, formerly the CFDA number - two digits, a period, three digits (for example 84.027). Identifies the federal program the money comes from and is required on the Schedule of Expenditures of Federal Awards, so it must be captured on every federal grant. Left blank on state, county and municipal awards, which have no ALN.</description>
    <inlineHelpText>Federal Assistance Listing Number (formerly CFDA), e.g. 84.027. Federal awards only - leave blank for state and local grants.</inlineHelpText>
    <label>ALN Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>