force-app/main/default/objects/Opportunity/fields/Ask_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ask_Amount__c</fullName>
    <description>The amount solicited from the donor on this Donation Request. Held against Amount (what the donor committed) and Received Amount (what actually landed as Gift Transactions) to measure ask-to-close performance.</description>
    <inlineHelpText>What we asked the donor for. Leave blank until the ask has actually been made.</inlineHelpText>
    <label>Ask Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>