force-app/main/default/objects/Opportunity/fields/Award_Won__c.field-meta.xml
<CustomField>
    <fullName>Award_Won__c</fullName>
    <description>1 when the grant was won, 0 otherwise. Exists only so reports can compute a success rate: a report cannot count rows conditionally, so success rate by funder is Award Won:SUM / Record Count with the report filtered to Closed = True. Reporting helper - deliberately kept off page layouts.</description>
    <formula>IF(IsWon, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Award Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>