force-app/main/default/objects/Opportunity/fields/Deadline_Type__c.field-meta.xml
<CustomField>
    <fullName>Deadline_Type__c</fullName>
    <description>How this grant deadline works: Hard, Rolling, or Invitation-Only.</description>
    <inlineHelpText>How this grant deadline works: Hard, Rolling, or Invitation-Only.</inlineHelpText>
    <label>Deadline Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard</fullName>
            </value>
            <value>
                <fullName>Rolling</fullName>
            </value>
            <value>
                <fullName>Invitation-Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>