force-app/main/default/objects/Opportunity/fields/Donation_Date__c.field-meta.xml
<CustomField>
    <fullName>Donation_Date__c</fullName>
    <description>The date the donation is expected or was made, as distinct from Close Date, which tracks the pipeline decision point. Seeds EffectiveStartDate on the Gift Commitment created from this record.</description>
    <inlineHelpText>When the gift is expected to be made. Close Date tracks when the ask is decided; this tracks when the money moves.</inlineHelpText>
    <label>Donation Date</label>
    <type>Date</type>
</CustomField>