force-app/main/default/objects/Opportunity/fields/Donation_Method__c.field-meta.xml
<CustomField>
    <fullName>Donation_Method__c</fullName>
    <description>How the donor intends to pay. Values are a 1:1 mirror of the active GiftTransaction PaymentMethod picklist, so the intent captured on the Donation Request carries straight through to the Gift Commitment and its Gift Transactions with no value mapping.</description>
    <inlineHelpText>How the donor intends to pay. Carries forward as the payment method on the resulting Gift Transactions.</inlineHelpText>
    <label>Donation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>In-Kind</fullName>
            </value>
            <value>
                <fullName>Stock</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Cryptocurrency</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>Venmo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>