force-app/main/default/objects/Opportunity/fields/Eligible_for_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks a grant that is up for a renewal decision. Forms the denominator (the &quot;eligible&quot; population) for the Grant Renewal Rate report and KPI.</description>
    <inlineHelpText>Check when this grant is eligible to be renewed for a future cycle.</inlineHelpText>
    <label>Eligible for Renewal</label>
    <type>Checkbox</type>
</CustomField>