force-app/main/default/objects/Opportunity/fields/Grant_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Grant_End_Date__c</fullName>
    <description>Last day of the grant&apos;s period of performance, inclusive - a 10/01 to 09/30 award ends on 09/30. Drives Grant Length. Costs incurred after this date are not reimbursable, so it is the cut-off the reimbursement schedule is built against.</description>
    <inlineHelpText>Last day of the period of performance, inclusive. A one-year 10/01 award ends 09/30, not 10/01.</inlineHelpText>
    <label>Grant End Date</label>
    <type>Date</type>
</CustomField>