force-app/main/default/objects/Opportunity/fields/Grant_Length__c.field-meta.xml
<CustomField>
    <fullName>Grant_Length__c</fullName>
    <description>Length of the period of performance in whole months, calculated from Grant Start Date and Grant End Date. Treats the end date as inclusive, so 10/01/2025 to 09/30/2026 reads 12, not 11. Blank until both dates are set. Formula - not editable.</description>
    <formula>IF(
    OR(ISBLANK(Grant_Start_Date__c), ISBLANK(Grant_End_Date__c)),
    NULL,
    ((YEAR(Grant_End_Date__c) - YEAR(Grant_Start_Date__c)) * 12)
        + (MONTH(Grant_End_Date__c) - MONTH(Grant_Start_Date__c))
        + IF(DAY(Grant_End_Date__c) &gt;= DAY(Grant_Start_Date__c), 1, 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Period of performance in whole months, from Grant Start Date to Grant End Date. Calculated - fix the dates to change it.</inlineHelpText>
    <label>Grant Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>