force-app/main/default/objects/Opportunity/fields/Grant_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Grant_Start_Date__c</fullName>
    <description>First day of the grant&apos;s period of performance. Distinct from CloseDate, which is when the award decision lands. Drives Grant Length and seeds EffectiveStartDate on the Gift Commitment.</description>
    <inlineHelpText>First day of the period of performance, from the notice of award. Not the date the award was decided - that is Close Date.</inlineHelpText>
    <label>Grant Start Date</label>
    <type>Date</type>
</CustomField>