force-app/main/default/objects/Opportunity/fields/LOI_Accepted_Count__c.field-meta.xml
<CustomField>
    <fullName>LOI_Accepted_Count__c</fullName>
    <description>1 when LOI Outcome is Accepted, otherwise 0. Report helper so LOI Success Rate can be SUM(Accepted) / COUNT(Submitted). Submitted is defined by LOI Submitted Date, not current Stage.</description>
    <formula>IF(ISPICKVAL(LOI_Outcome__c, &quot;Accepted&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOI Accepted Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>