force-app/main/default/objects/Opportunity/fields/LOI_Outcome__c.field-meta.xml
<CustomField>
    <fullName>LOI_Outcome__c</fullName>
    <description>Funder decision on the Letter of Intent. Accepted = invited to submit a full proposal (numerator for LOI Success Rate). Declined = LOI not invited forward. N/A = funder has no LOI step, so this record is excluded from LOI Success Rate. Independent of Stage so the outcome is retained after the opportunity moves on or is declined.</description>
    <label>LOI Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>