force-app/main/default/objects/Opportunity/fields/LOI_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>LOI_Submitted_Date__c</fullName>
    <description>Date the Letter of Intent was submitted to the funder. Distinct from Close Date (award decision) and from later proposal dates. Populated when an LOI is sent; leave blank when the funder does not use an LOI. Denominator for LOI Success Rate. Do not clear after a decline - the submission still happened.</description>
    <label>LOI Submitted Date</label>
    <type>Date</type>
</CustomField>