force-app/main/default/objects/Opportunity/fields/Max_Ask_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Ask_Amount__c</fullName>
    <description>Maximum amount we may request from this funder.</description>
    <inlineHelpText>Maximum amount we may request from this funder.</inlineHelpText>
    <label>Max Ask Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>