force-app/main/default/objects/Opportunity/fields/Next_Open_Cycle_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Open_Cycle_Date__c</fullName>
    <description>Date the funder&apos;s next application cycle opens. Distinct from Re-approach Eligibility Date (when ESSC is allowed to re-engage) and from Close Date (this cycle&apos;s award decision). Retain this value when Stage is LOI Declined so declined records still inform the next-cycle calendar.</description>
    <label>Next Open Cycle Date</label>
    <type>Date</type>
</CustomField>