force-app/main/default/objects/Opportunity/fields/Open_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Open_Deliverables__c</fullName>
    <description>Count of related Deliverables that are not Completed or Cancelled (i.e. open/overdue). Maintained automatically by the Recalc Open Deliverables flows.</description>
    <inlineHelpText>Number of open or overdue deliverables on this Opportunity. Auto-calculated.</inlineHelpText>
    <label>Open Deliverables</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>