force-app/main/default/objects/Opportunity/fields/Prior_Cycle_Amount__c.field-meta.xml
<CustomField>
    <fullName>Prior_Cycle_Amount__c</fullName>
    <description>Amount awarded on the Prior Cycle Grant, pulled across the self-lookup so a single flat Opportunity report can show this cycle and last cycle side by side without a self-join. Blank when Prior Cycle Grant is empty.</description>
    <formula>Prior_Cycle_Grant__r.Amount</formula>
    <label>Prior Cycle Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>