force-app/main/default/objects/Opportunity/fields/Prior_Cycle_Grant__c.field-meta.xml
<CustomField>
    <fullName>Prior_Cycle_Grant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prior Cycle Grant</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Renewal Opportunities</relationshipLabel>
    <relationshipName>Renewal_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>