force-app/main/default/objects/Opportunity/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The program area this grant funds. Lookup to the Program object; drives the Program Area grouping/filter on the Grant Pipeline Dashboard.</description>
    <inlineHelpText>The program area this grant supports.</inlineHelpText>
    <label>Program</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>Grant Opportunities</relationshipLabel>
    <relationshipName>Grant_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>