force-app/main/default/objects/Opportunity/fields/Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Received_Amount__c</fullName>
    <description>Total actually received against this Donation Request. Gift Transactions hang off the Gift Commitment rather than the Opportunity, so this is maintained by the fundraising team (or downstream automation) rather than rolled up by the platform.</description>
    <inlineHelpText>Total received to date. Gift Transactions are children of the Gift Commitment, not of this Opportunity, so this figure is not auto-calculated.</inlineHelpText>
    <label>Received Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>