force-app/main/default/objects/Opportunity/fields/Relationship_Manager_Org__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager_Org__c</fullName>
    <description>Relationship Manager from the related Funder Account.</description>
    <formula>Account.Relationship_Manager_Grants__r.FirstName &amp; &quot; &quot; &amp; Account.Relationship_Manager_Grants__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Relationship Manager from the related Funder Account.</inlineHelpText>
    <label>Relationship Manager – Org</label>
    <type>Text</type>
</CustomField>