force-app/main/default/objects/Opportunity/fields/Renewed__c.field-meta.xml
<CustomField>
    <fullName>Renewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when this eligible grant has been renewed into a new cycle (typically checked right before cloning to the next year&apos;s grant). Numerator for the Grant Renewal Rate.</description>
    <inlineHelpText>Check when this grant has been renewed for the next cycle (before cloning).</inlineHelpText>
    <label>Renewed</label>
    <type>Checkbox</type>
</CustomField>