force-app/main/default/objects/Opportunity/fields/Renewed_Num__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Num__c</fullName>
    <description>Numeric mirror of the Renewed checkbox (1 = renewed, 0 = not). Exists so the Grant Renewal Rate report can sum renewals in a custom summary formula (checkboxes and report row-level formulas cannot be summed in a summary formula).</description>
    <formula>IF(Renewed__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewed (Numeric)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>