force-app/main/default/objects/Opportunity/fields/Service_Line_Lead__c.field-meta.xml
<CustomField>
    <fullName>Service_Line_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal staff member accountable for the grant</description>
    <label>Service Line Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>