force-app/main/default/objects/Opportunity/fields/Sports_Team__c.field-meta.xml
<CustomField>
    <fullName>Sports_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sports Team</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organization</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>