force-app/main/default/objects/Opportunity/fields/YoY_Award_Change_Percent__c.field-meta.xml
<CustomField>
    <fullName>YoY_Award_Change_Percent__c</fullName>
    <description>YoY Award Change as a percentage of the prior cycle award. The formula multiplies by 100 because a Percent formula field displays whatever it returns with a % sign - it does not scale the result. Blank when there is no prior cycle, either Amount is empty, or the prior award was zero.</description>
    <formula>IF(
    OR(
        ISBLANK(Prior_Cycle_Grant__c),
        ISBLANK(Amount),
        ISBLANK(Prior_Cycle_Grant__r.Amount),
        Prior_Cycle_Grant__r.Amount = 0
    ),
    NULL,
    (Amount - Prior_Cycle_Grant__r.Amount) / Prior_Cycle_Grant__r.Amount * 100
)</formula>
    <label>YoY Award Change %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>