force-app/main/default/objects/Opportunity/recordTypes/Donation_Request.recordType-meta.xml
<RecordType>
    <fullName>Donation_Request</fullName>
    <active>true</active>
    <businessProcess>Opportunity Default</businessProcess>
    <label>Donation Request</label>
</RecordType>