force-app/main/default/objects/Opportunity/recordTypes/Major_Gift.recordType-meta.xml
<RecordType>
    <fullName>Major_Gift</fullName>
    <active>true</active>
    <businessProcess>Opportunity Default</businessProcess>
    <label>Major Gift</label>
</RecordType>