force-app/main/default/objects/Opportunity/validationRules/End_Date_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_After_Start_Date</fullName>
    <active>true</active>
    <description>Keeps Start Date and End Date in the correct order on Foundation Grant and Government Grant opportunities. Fires only when both are populated, so a record can still be saved mid-entry.</description>
    <errorConditionFormula>AND(
    OR(
        RecordType.DeveloperName = &apos;Foundation_Grant&apos;,
        RecordType.DeveloperName = &apos;Government_Grant&apos;
    ),
    NOT(ISBLANK(Start_Date__c)),
    NOT(ISBLANK(End_Date__c)),
    End_Date__c &lt; Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be on or after Start Date.</errorMessage>
</ValidationRule>