force-app/main/default/objects/Opportunity/validationRules/Enforce_Foundation_Grant_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Foundation_Grant_Read_Only</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $Permission.GR_Read_Only_Foundation_Grants,
    RecordType.DeveloperName = &apos;Foundation_Grant&apos;,
    ISCHANGED(Id)
)</errorConditionFormula>
    <errorMessage>You do not have permission to modify Foundation Grant opportunities. These records are read-only.</errorMessage>
</ValidationRule>