force-app/main/default/objects/Opportunity/listViews/Government_Grant_Opportunities.listView-meta.xml
<ListView>
    <fullName>Government_Grant_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Government_Grant</value>
    </filters>
    <label>Government Grant Opportunities</label>
    <sharedTo>
        <group>Gov_Relations</group>
    </sharedTo>
</ListView>