force-app/main/default/objects/Opportunity/listViews/Major_Gift_Opportunities.listView-meta.xml
<ListView>
    <fullName>Major_Gift_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Major_Gift</value>
    </filters>
    <label>Major Gift Opportunities</label>
    <sharedTo>
        <group>Development</group>
    </sharedTo>
</ListView>